# darc-el

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
config/: llm_models.yaml
darc-el-backend/: Dockerfile  README.md  pyproject.toml
darc-el-backend/scripts/: test-upload-pdf.ps1
darc-el-backend/src/: main.py
darc-el-backend/src/darc-el/api/: __init__.py  routes.py
darc-el-backend/src/darc-el/core/: document_ingestion.py
darc-el-backend/src/darc-el/service/: __init__.py  document_ingestion_service.py  document_service.py  neo4j_document_service.py
darc-el-backend/tests/: test_download_service.py  test_main_orchestration.py
darc-el-ui/: Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
darc-el-ui/darc_el_ui/: asgi.py  settings.py  urls.py  wsgi.py
darc-el-ui/dashboard/: apps.py  views.py
darc-el-ui/dashboard/templates/dashboard/: index.html
darc-el-ui/webapp/: apps.py  views.py
darc-el-ui/webapp/static/webapp/: styles.css
darc-el-ui/webapp/templates/webapp/: base.html  document.html  index.html  model.html  moitor.html  upload.html
dockerimage/llama-cpp/: Dockerfile  README.md
dockerimage/neo4j/: Dockerfile  README.md
dockerimage/neo4j/conf/: neo4j.conf
dockerimage/ollama/: Dockerfile  load_ollama_model.sh
src/: main.py
src/darc-el/api/: __init__.py  routes.py
src/darc-el/core/: __init__.py  document_upload_request.py  download_request.py
src/darc-el/service/: __init__.py  document_ingestion_service.py  download_service.py  llm_client_service.py  neo4j_document_service.py
tests/: conftest.py  test_download_service.py  test_main_orchestration.py
