[build-system]
requires = ["hatch>=1.16", "hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "darc-el-ui"
version = "0.1.0"
description = "DARC-EL frontend"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Roland Ramp" },
]
requires-python = ">=3.12"
dependencies = [
  "Django>=6.0.4",
  "httpx>=0.28.1",
  "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
